fix body top padding on mobile

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,5 +1,13 @@
-body {
-  padding-top: 64px;
+@media(max-width:767px) {
+  body {
+    padding-top: 59px;
+  }
+}
+
+@media(min-width:768px) {
+  body {
+    padding-top: 64px;
+  }
 }
 
 .main-content {
